--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
   "private": true,
-  "name": "project-name",
+  "name": "@darkobits/interop-import-default",
   "version": "0.1.0",
   "type": "module",
   "license": "WTFPL",
-  "description": "PROJECT_DESCRIPTION",
-  "author": "AUTHOR_NAME",
+  "description": "TypeScript-friendly utility for extracting default exports from tricky packages.",
+  "author": "darkobits",
   "engines": {
     "node": ">=16",
     "npm": ">=8"
   },
   "repository": {
     "type": "git",
-    "url": "REPOSITORY_URL"
+    "url": "https://github.com/darkobits/interop-import-default"
   },
   "files": [
     "dist"
   ],
-  "main": "dist/index.js",
+  "main": "dist/interop-import-default.js",
   "scripts": {
     "prepare": "nr prepare",
     "help": "nr --scripts"
   },
   "devDependencies": {
-    "@darkobits/ts": "~0.14.11"
+    "@darkobits/ts": "~0.14.11",
+    "ow": "0.28.1"
   }
 }
